# tradingbot

./: Procfile  README.md  chat_config.json  fly.toml  procfile  pyproject.toml  requirements.txt  tradingbot.py
data/: bybit_symbols_cache.json  chat_configs.json
