[project]
name = "tradingbot"
version = "0.1.0"
description = "A Telegram bot for trading Bybit futures assets."
authors = [
    { name = "michaelraphael948-dot", email = "michaelraphael948@gmail.com" }
]
readme = "README.md"
requires-python = "3.11.*"
dependencies = [
    "python-telegram-bot==20.3",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "plotly==5.22.0",
    "requests==2.31.0",
    "yfinance==0.2.40",
    "apscheduler==3.10.4",
    "kaleido==0.2.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

